# CartCollector-8

./: .gitignore  README.md  run  run-installer
cart-installer/: cart.py  main.py  util.py
cart-launcher/: .gitignore  CMakeLists.txt  CartLauncher.cpp
cartcollector/: cart.py  cartfinder.py  cartindexer.py  test.py  util.py
